Enum user_role {
  user
  moderator
  admin
}

Enum user_status {
  active
  email_unverified
  suspended
  banned
  deleted
}

Enum user_gender {
  male
  female
}

Enum season_name {
  Spring
  Summer
  Fall
  Winter
}

Enum anime_status {
  ongoing
  completed
  upcoming
}

Enum content_access_type {
  free
  premium
}

Enum episode_access_type {
  inherit
  free
  premium
}

Enum episode_status {
  processing
  ready
  error
}

Enum category_type {
  genre
  tag
}

Enum media_purpose {
  avatar
  cover
  banner
  thumbnail
  episode_thumbnail
}

Enum media_status {
  active
  archived
  deleted
}

Enum notification_type {
  new_episode
  reply_comment
  membership
  moderation
  system
}

Enum notification_ref_type {
  anime
  episode
  comment
  membership
  payment
  report
}

Enum weekday {
  monday
  tuesday
  wednesday
  thursday
  friday
  saturday
  sunday
}

Enum report_status {
  pending
  reviewing
  resolved
  rejected
}

Enum user_report_reason {
  spam
  toxic
  harassment
  advertising
  other
}

Enum episode_report_reason {
  broken_video
  missing_subtitle
  wrong_subtitle
  wrong_content
  dead_link
  policy_violation
  other
}

Enum plan_status {
  active
  inactive
  archived
}

Enum membership_status {
  pending
  scheduled
  active
  grace_period
  expired
  cancelled
  refunded
}

Enum payment_method {
  momo
  vnpay
  stripe
  paypal
  bank_transfer
}

Enum payment_status {
  pending
  success
  failed
  refunded
}

Enum review_status {
  visible
  hidden
  pending
  deleted
}

Enum comment_status {
  visible
  hidden
  pending
  deleted
}

Enum comment_target_type {
  anime
  episode
}

Enum moderation_action_type {
  hide_comment
  restore_comment
  hide_review
  restore_review
  ban_user
  unban_user
  resolve_report
  reject_report
}

Enum audit_action {
  user_login
  payment_webhook
  membership_activated
  moderation_action
  admin_update
}

Table users {
  id integer [pk, increment]
  username varchar(100) [unique, not null]
  email varchar(255) [unique, not null]
  password_hash varchar(255) [not null, note: 'Hash only, never plain text']
  gender user_gender
  role user_role [not null, default: 'user']
  status user_status [not null, default: 'email_unverified']
  last_login_at timestamp
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  deleted_at timestamp

  indexes {
    email [name: 'ix_users_email']
    username [name: 'ix_users_username']
    status [name: 'ix_users_status']
  }
}

Table broadcast_seasons {
  id integer [pk, increment]
  name season_name [not null]
  year integer [not null]
  slug varchar(100) [unique, not null]

  indexes {
    (name, year) [unique, name: 'uq_broadcast_seasons_name_year']
    slug [name: 'ix_broadcast_seasons_slug']
  }
}

Table anime_series {
  id integer [pk, increment]
  title varchar(255) [not null]
  title_other varchar(255)
  description text
  status anime_status [not null, default: 'upcoming']
  age_rating varchar(10)
  access_type content_access_type [not null, default: 'free']
  aired_from date
  aired_to date
  country varchar(100)
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  deleted_at timestamp
  created_by integer [ref: > users.id]
  updated_by integer [ref: > users.id]

  indexes {
    title [name: 'ix_anime_series_title']
    status [name: 'ix_anime_series_status']
    access_type [name: 'ix_anime_series_access_type']
  }
}

Table anime_releases {
  id integer [pk, increment]
  series_id integer [not null, ref: > anime_series.id]
  broadcast_season_id integer [ref: > broadcast_seasons.id]
  release_title varchar(255)
  description text [note: 'Mô tả riêng cho season/cour/movie/OVA này']
  slug varchar(255) [unique, not null]
  trailer_url varchar(500)
  release_year integer
  release_number integer
  release_type varchar(50) [not null, default: 'season', note: 'season | cour | movie | ova | special']
  duration integer [note: 'Minutes per episode']
  age_rating varchar(10)
  status anime_status [not null, default: 'upcoming']
  access_type content_access_type [not null, default: 'free']
  total_episodes integer
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  deleted_at timestamp

  indexes {
    slug [name: 'ix_anime_releases_slug']
    series_id [name: 'ix_anime_releases_series_id']
    broadcast_season_id [name: 'ix_anime_releases_broadcast_season_id']
    status [name: 'ix_anime_releases_status']
    access_type [name: 'ix_anime_releases_access_type']
  }

  Note: 'CHECK release_year IS NULL OR release_year >= 1900'
}

Table episodes {
  id integer [pk, increment]
  anime_release_id integer [not null, ref: > anime_releases.id]
  episode_num integer [not null]
  title varchar(255)
  description text
  video_key varchar(500) [not null, note: 'Private object storage key; prefer signed URL at runtime']
  duration integer [note: 'Seconds']
  size_bytes bigint
  release_at timestamp
  access_type episode_access_type [not null, default: 'inherit']
  status episode_status [not null, default: 'processing']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  deleted_at timestamp

  indexes {
    (anime_release_id, episode_num) [unique, name: 'uq_episodes_release_episode_num']
    anime_release_id [name: 'ix_episodes_anime_release_id']
    release_at [name: 'ix_episodes_release_at']
    status [name: 'ix_episodes_status']
    access_type [name: 'ix_episodes_access_type']
  }

  Note: 'CHECK episode_num > 0; CHECK duration IS NULL OR duration >= 0; effective access = episode.access_type unless inherit, then anime_releases.access_type'
}

Table categories {
  id integer [pk, increment]
  name varchar(100) [unique, not null]
  slug varchar(100) [unique, not null]
  type category_type [not null]

  indexes {
    slug [name: 'ix_categories_slug']
    type [name: 'ix_categories_type']
  }
}

Table anime_categories {
  series_id integer [pk, ref: > anime_series.id]
  category_id integer [pk, ref: > categories.id]
}

Table studios {
  id integer [pk, increment]
  name varchar(255) [unique, not null]
  slug varchar(255) [unique, not null]
  founded integer
  website varchar(500)
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  deleted_at timestamp

  indexes {
    slug [name: 'ix_studios_slug']
  }
}

Table anime_studios {
  anime_release_id integer [pk, ref: > anime_releases.id]
  studio_id integer [pk, ref: > studios.id]
}

Table media_assets {
  id integer [pk, increment]
  user_id integer [ref: > users.id]
  series_id integer [ref: > anime_series.id]
  episode_id integer [ref: > episodes.id]
  purpose media_purpose [not null]
  storage_key varchar(500) [unique, not null, note: 'Private object storage key; app/CDN generates URL at runtime']
  mime_type varchar(100)
  width integer
  height integer
  size_bytes bigint
  alt_text varchar(255)
  status media_status [not null, default: 'active']
  created_by integer [ref: > users.id]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  deleted_at timestamp

  indexes {
    (user_id, purpose, status) [name: 'ix_media_assets_user_purpose']
    (series_id, purpose, status) [name: 'ix_media_assets_series_purpose']
    (episode_id, purpose, status) [name: 'ix_media_assets_episode_purpose']
    storage_key [name: 'ix_media_assets_storage_key']
  }

  Note: 'Exactly one owner must be set: user_id OR series_id OR episode_id. purpose examples: avatar for users; cover/banner/thumbnail for anime_series; episode_thumbnail for episodes. CHECK width/height > 0 when present; CHECK size_bytes >= 0.'
}

Table schedules {
  id integer [pk, increment]
  anime_release_id integer [unique, not null, ref: > anime_releases.id]
  weekday weekday [not null]
  air_time time [not null, note: 'Broadcast time, usually JST']
}

Table membership_plans {
  id integer [pk, increment]
  code varchar(50) [unique, not null]
  name varchar(100) [unique, not null]
  price decimal(12,2) [not null]
  duration_days integer [not null]
  description text
  status plan_status [not null, default: 'active']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    status [name: 'ix_membership_plans_status']
  }

  Note: 'CHECK price >= 0; CHECK duration_days >= 0'
}

Table payments {
  id integer [pk, increment]
  user_id integer [not null, ref: > users.id]
  plan_id integer [ref: > membership_plans.id]
  transaction_code varchar(100) [unique, not null]
  gateway_event_id varchar(150) [unique]
  idempotency_key varchar(150) [unique]
  payment_method payment_method [not null]
  amount decimal(12,2) [not null]
  currency varchar(3) [not null, default: 'VND']
  status payment_status [not null, default: 'pending']
  provider_payload text
  paid_at timestamp
  failed_at timestamp
  refunded_at timestamp
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    transaction_code [name: 'ix_payments_transaction_code']
    gateway_event_id [name: 'ix_payments_gateway_event_id']
    idempotency_key [name: 'ix_payments_idempotency_key']
    (user_id, status, created_at) [name: 'ix_payments_user_status_created_at']
  }

  Note: 'CHECK amount >= 0'
}

Table user_memberships {
  id integer [pk, increment]
  user_id integer [not null, ref: > users.id]
  plan_id integer [not null, ref: > membership_plans.id]
  payment_id integer [ref: > payments.id]
  status membership_status [not null, default: 'pending']
  start_at timestamp [not null]
  end_at timestamp [not null]
  activated_at timestamp
  cancelled_at timestamp
  expired_at timestamp
  refunded_at timestamp
  auto_renew boolean [not null, default: false]
  cancel_at_period_end boolean [not null, default: false]
  grace_until timestamp
  renewed_from_id integer [ref: > user_memberships.id]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    (user_id, status, end_at) [name: 'ix_user_memberships_user_status_end_at']
    payment_id [unique, name: 'uq_user_memberships_payment_id']
  }

  Note: 'CHECK end_at > start_at; PostgreSQL partial unique index recommended: UNIQUE(user_id) WHERE status IN (active, grace_period)'
}

Table watch_history {
  id integer [pk, increment]
  user_id integer [not null, ref: > users.id]
  episode_id integer [not null, ref: > episodes.id]
  progress_sec integer [not null, default: 0]
  completed boolean [not null, default: false]
  watched_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    (user_id, episode_id) [unique, name: 'uq_watch_history_user_episode']
    (user_id, watched_at) [name: 'ix_watch_history_user_watched_at']
    episode_id [name: 'ix_watch_history_episode_id']
  }

  Note: 'CHECK progress_sec >= 0'
}

Table favorites {
  user_id integer [pk, ref: > users.id]
  series_id integer [pk, ref: > anime_series.id]
  created_at timestamp [not null, default: `now()`]

  indexes {
    (user_id, created_at) [name: 'ix_favorites_user_created_at']
    series_id [name: 'ix_favorites_series_id']
  }
}

Table reviews {
  user_id integer [pk, ref: > users.id]
  series_id integer [pk, ref: > anime_series.id]
  score integer [not null]
  content text
  status review_status [not null, default: 'visible']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  hidden_at timestamp
  moderated_by integer [ref: > users.id]

  indexes {
    (series_id, status, created_at) [name: 'ix_reviews_series_status_created_at']
    user_id [name: 'ix_reviews_user_id']
  }

  Note: 'CHECK score BETWEEN 1 AND 5'
}

Table comments {
  id integer [pk, increment]
  user_id integer [not null, ref: > users.id]
  target_type comment_target_type [not null]
  series_id integer [ref: > anime_series.id]
  episode_id integer [ref: > episodes.id]
  parent_comment_id integer [ref: > comments.id]
  root_comment_id integer [ref: > comments.id]
  depth integer [not null, default: 0]
  path varchar(500) [note: 'Materialized path for scalable threaded reads']
  reply_to_user_id integer [ref: > users.id]
  content text [not null]
  status comment_status [not null, default: 'visible']
  is_deleted boolean [not null, default: false]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  deleted_at timestamp
  moderated_by integer [ref: > users.id]
  moderated_at timestamp

  indexes {
    user_id [name: 'ix_comments_user_id']
    series_id [name: 'ix_comments_series_id']
    episode_id [name: 'ix_comments_episode_id']
    parent_comment_id [name: 'ix_comments_parent_comment_id']
    (root_comment_id, path) [name: 'ix_comments_root_path']
    (status, created_at) [name: 'ix_comments_status_created_at']
  }

  Note: 'Cach 1: keep target_type + real FKs. CHECK target_type=anime => series_id IS NOT NULL AND episode_id IS NULL; CHECK target_type=episode => episode_id IS NOT NULL AND series_id IS NULL; CHECK root comment has depth=0; CHECK reply has parent_comment_id, root_comment_id, depth>0; CHECK depth BETWEEN 0 AND 5. Replies inherit target_type/target_id from parent in service or trigger.'
}

Table episode_reports {
  id integer [pk, increment]
  reporter_id integer [not null, ref: > users.id]
  episode_id integer [not null, ref: > episodes.id]
  reason episode_report_reason [not null]
  playback_position_sec integer
  description text
  status report_status [not null, default: 'pending']
  admin_note text
  resolved_by integer [ref: > users.id]
  resolved_at timestamp
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    (status, created_at) [name: 'ix_episode_reports_status_created_at']
    (episode_id, status, created_at) [name: 'ix_episode_reports_episode_status_created_at']
    (reporter_id, episode_id, created_at) [name: 'ix_episode_reports_reporter_episode_created_at']
    (reporter_id, created_at) [name: 'ix_episode_reports_reporter_created_at']
  }

  Note: 'CHECK playback_position_sec IS NULL OR playback_position_sec >= 0; no UNIQUE(reporter_id, episode_id) so one user can report different/recurrent issues. Anti-spam should use backend rate limit or PostgreSQL partial unique index for open reports if needed.'
}

Table user_reports {
  id integer [pk, increment]
  reporter_id integer [not null, ref: > users.id]
  accused_id integer [not null, ref: > users.id]
  reason user_report_reason [not null]
  description text
  status report_status [not null, default: 'pending']
  admin_note text
  resolved_by integer [ref: > users.id]
  resolved_at timestamp
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    (reporter_id, accused_id) [unique, name: 'uq_user_report']
    (status, created_at) [name: 'ix_user_reports_status_created_at']
    accused_id [name: 'ix_user_reports_accused_id']
  }

  Note: 'CHECK reporter_id <> accused_id'
}

Table notifications {
  id integer [pk, increment]
  user_id integer [not null, ref: > users.id]
  type notification_type [not null]
  title varchar(255)
  content text
  is_read boolean [not null, default: false]
  ref_type notification_ref_type
  ref_id integer
  created_at timestamp [not null, default: `now()`]
  read_at timestamp

  indexes {
    (user_id, is_read, created_at) [name: 'ix_notifications_user_read_created_at']
  }
}

Table moderation_actions {
  id integer [pk, increment]
  moderator_id integer [not null, ref: > users.id]
  action_type moderation_action_type [not null]
  target_type varchar(50) [not null]
  target_id integer [not null]
  reason text
  note text
  created_at timestamp [not null, default: `now()`]

  indexes {
    (moderator_id, created_at) [name: 'ix_moderation_actions_moderator_created_at']
    (target_type, target_id) [name: 'ix_moderation_actions_target']
  }
}

Table audit_logs {
  id integer [pk, increment]
  actor_id integer [ref: > users.id]
  action audit_action [not null]
  target_type varchar(50)
  target_id integer
  ip_address varchar(45)
  user_agent varchar(500)
  metadata_json text
  created_at timestamp [not null, default: `now()`]

  indexes {
    (actor_id, created_at) [name: 'ix_audit_logs_actor_created_at']
    (action, created_at) [name: 'ix_audit_logs_action_created_at']
    (target_type, target_id) [name: 'ix_audit_logs_target']
  }
}
